[gd_scene load_steps=9 format=3 uid="uid://kv7ivsnb73qd"]

[ext_resource type="Script" uid="uid://lcrdb0qqct6u" path="res://scripts/betting_screen_horse.gd" id="1_ayl4k"]
[ext_resource type="Texture2D" uid="uid://c02cctpyaek4n" path="res://assets/background.png" id="2_8lkvh"]
[ext_resource type="LabelSettings" uid="uid://bfvl42gbhptkm" path="res://scenes/betting_screen_black_jack.tres" id="3_08hsi"]
[ext_resource type="FontFile" uid="uid://dsdsw7axr2tds" path="res://assets/fonts/Kenney Mini Square.ttf" id="4_ervcg"]
[ext_resource type="StyleBox" uid="uid://db6s1v6bg352u" path="res://scenes/main_buttons.tres" id="5_ervcg"]
[ext_resource type="StyleBox" uid="uid://b7mcobdps5rxj" path="res://scenes/buttons_pressed.tres" id="6_vy2lj"]
[ext_resource type="StyleBox" uid="uid://ok6rscd3y3m" path="res://scenes/button_hover.tres" id="7_uexwq"]

[sub_resource type="LabelSettings" id="LabelSettings_btmq5"]
font = ExtResource("4_ervcg")
font_size = 22

[node name="Betting_screen Horse racing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayl4k")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576.49994, 324.49997)
scale = Vector2(4.5429683, 2.5898435)
texture = ExtResource("2_8lkvh")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 106.0
offset_right = 86.0
offset_bottom = 146.0
grow_horizontal = 2
text = "Place Bet and Choose a Horse to bet on:"
label_settings = ExtResource("3_08hsi")

[node name="btnBet" type="Button" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 432.0
offset_right = 671.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("4_ervcg")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_ervcg")
theme_override_styles/pressed = ExtResource("6_vy2lj")
theme_override_styles/hover = ExtResource("7_uexwq")
text = " Place Bet "

[node name="lblError" type="Label" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 229.0
offset_right = 1016.0
offset_bottom = 269.0
text = "Error Message"
label_settings = SubResource("LabelSettings_btmq5")
autowrap_mode = 2

[node name="EditBet" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 296.0
offset_right = 685.0
offset_bottom = 327.0
theme_override_fonts/font = ExtResource("4_ervcg")
placeholder_text = "Input betting amount.."

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 160.0
offset_right = 650.0
offset_bottom = 282.0
allow_reselect = true
item_count = 4
item_0/text = "Horse1"
item_1/text = "Horse2"
item_2/text = "Horse3"
item_3/text = "Horse4"

[node name="btnBack" type="Button" parent="."]
layout_mode = 0
offset_left = 945.0
offset_top = 572.0
offset_right = 1049.0
offset_bottom = 620.0
theme_override_fonts/font = ExtResource("4_ervcg")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_ervcg")
theme_override_styles/pressed = ExtResource("6_vy2lj")
theme_override_styles/hover = ExtResource("7_uexwq")
text = " Back "

[connection signal="pressed" from="btnBet" to="." method="_on_btn_bet_pressed"]
[connection signal="pressed" from="btnBack" to="." method="_on_btn_back_pressed"]
